--- a/transit.html
+++ b/transit.html
@@ -36,6 +36,7 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://github.com/unexre/ismybuslate">Add My City!</a></li>
                 <li><a>Blog</a></li>
                 <li><a>Careers</a></li>
                 <li><a>About</a></li>
